--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-body{
+.container{
     margin: 0;
     display: grid;
     grid-template-columns: repeat(2, 4em);
@@ -36,6 +36,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.flex{
+    display: flex;
+    gap: 1rem;
 }
 
 .card{
